# my-mcp-server

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .npmrc  ADVANCED.md  AI-PROMPT.md  CLAUDE.md  COMPREHENSIVE_GUIDE.md  CONTRIBUTING.md  COOLIFY_DEPLOYMENT.md  DEPLOYMENT.md  DOCUMENTATION_SEARCH.md  Dockerfile  Dockerfile.orangepi  HYBRID_AUTH.md  INSTALL.md  INTEGRATION-TESTING.md  INTEGRATIONS.md  MULTI_DEVICE_SETUP.md  ORANGE_PI_DEPLOYMENT.md  PROMPTS_PLAN_REVISED.md  QUICKSTART-BOOKSTACK.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SESSION-SUMMARY-2025-11-03.md  SESSION_SUMMARY_2024-11-02.md  SESSION_SUMMARY_2024-11-02_BookStack.md  SESSION_SUMMARY_2025-11-02_Documentation.md  TODO.md  ai_prompt.md  bookstack-content-creation.md  cloudflare-dns-setup.sh  cloudflared-config.yml  config.example.json  deploy-linux.sh  deploy-with-auth.sh  dev.bat  dev.sh  (+38 more)
.continue/mcpServers/: new-mcp-server.yaml
.copilot/: prompt-metadata.json
.copilot/agents/: chat-agent.md  cnc-support.agent.md  docs-agent.md  qas-agent.md  script-agent.md  user-provided-info.md
.github/: TODOs.md  copilot-instructions.md  mcp.json
archived-sessions/: SESSION_SUMMARY_2024-11-02.md  SESSION_SUMMARY_2024-11-02_BookStack.md
docs/: ADVANCED.md  API-INTEGRATIONS.md  COMPREHENSIVE_GUIDE.md  CONTEXT7-INTEGRATION.md  INDEX.md  README.md  RECIPE_SETUP_GUIDE.md  SECURITY_INCIDENT_API_KEY_EXPOSURE.md  TEST_REPORT.md  TROUBLESHOOTING.md
scripts/: generate-project-state.mjs  generate_tool.py  security_check.py  setup-windows.bat  test_tools.py  type_check.bat  type_check.sh
snapshots/: project-state-e14179ba.json
src/: integrations.py  registry.py  resources.py  server.ts  tool_registry.py  tools.py
src/utils/: audit.py  (+8 more)
tests/: README.md  bookStackTools.test.ts  cache.test.js  cache.test.js.map  cache.test.ts  clickup.mock.test.ts  commandTools.test.ts  context7.test.ts  coolifyTools.test.ts  duckduckgo.mock.test.ts  errors.test.ts  excelTools.test.ts  fileTools.test.d.ts  fileTools.test.d.ts.map  fileTools.test.js  fileTools.test.js.map  fileTools.test.ts  fireflyTools.test.ts  gelatoTools.test.ts  gitResources.test.ts  gitTools.test.ts  google.mock.test.ts  grocyTools.test.ts  image.mock.test.ts  imageColorMatch.mock.test.ts  imageToDxfTools.test.ts  imageTools.test.ts  image_more.mock.test.ts  kitchenOwlTools.test.ts  mailTools.test.ts  makerImageConverterTools.test.ts  openProjectTools.test.ts  openRouterTools.test.ts  pdfTools.test.ts  pdfTools_openai.mock.test.ts  pdf_extract.mock.test.ts  performance.test.ts  prompts.test.ts  search.consolidated.test.ts  searchTools.fetch.mock.test.ts  (+11 more)
vscode-extension/: my-mcp-server-extension-0.1.0.vsix  package-lock.json  package.json
(+87 files in other folders)
