[project]
name = "my-mcp-server"
version = "0.1.0"
description = "My personal MCP server with modular architecture and example tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.28.1",
  "click>=8.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
my-mcp-server = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src.mcp_server"]
py-modules = ["main"]

[tool.setuptools.package-dir]
"" = "."
"src.mcp_server" = "src/mcp_server"
